--- a/package.xml
+++ b/package.xml
@@ -10,7 +10,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>diagnostic_updater</build_depend>
-  <build_depend>driver_base</build_depend>
+  <!-- build_depend>driver_base</build_depend -->
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>rosconsole</build_depend>
   <build_depend>roscpp</build_depend>
